--- a/css/style.css
+++ b/css/style.css
@@ -260,30 +260,26 @@ body {
   .second-nav__container {
     background-color: #f9f7f6;
     display: grid;
-    grid-column: full-start / full-end;
-    /* seperate the image width from the list width of desktop */
-    grid-template-columns: 8rem 1fr; }
-    @media only screen and (max-width: 62.5em) {
-      .second-nav__container {
-        /* seperate the image width from the list width AND the hamburger icon on smaller devices */
-        grid-template-columns: 8rem 1fr 8rem;
-        grid-template-rows: 10rem; } }
+    grid-column: full-start / full-end; }
   .second-nav__badge {
     grid-column: 1 / 2;
+    grid-row: 1 /2;
     /* width of badge */
-    width: 8rem;
+    width: 7rem;
     /* height of the badge */
     height: 8rem;
     /* set margin from edge of page */
     margin: 1rem; }
-  .second-nav__inner {
+  .second-nav__content {
     /* content being list and menu toggle */
     grid-column: 2 / 10;
     display: grid;
     /* align list items vertically in middle */
     align-content: center; }
     @media only screen and (max-width: 62.5em) {
-      .second-nav__inner {
+      .second-nav__content {
+        grid-column: 2 / 8;
+        display: none;
         /* move hamburger to end horizontally */
         justify-content: end;
         /* needed to make it stay in the default position within the row */
@@ -304,7 +300,6 @@ body {
     display: none;
     height: 6rem;
     width: 6rem;
-    grid-column: 2/3;
     margin: 1.5rem;
     background-image: radial-gradient(#0c22e8, #0a19a1); }
     @media only screen and (max-width: 62.5em) {
@@ -312,10 +307,9 @@ body {
         display: block; } }
 
 .menu-toggle {
+  grid-column: 9 /10;
   /* hide hamburger on larger viewports */
   display: none;
-  /* sit in the last part of the layout 8rem 1fr 8rem for smaller devices detailed above */
-  grid-column: 2 / 3;
   /* set margin from edge of page */
   margin: 1rem;
   /*set width and height of hamburger */
