--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -3,31 +3,27 @@
     background-color: $color-grey-1;
     display: grid;
     grid-column: full-start / full-end;
-    /* seperate the image width from the list width of desktop */
-    grid-template-columns: 8rem 1fr;
-    @media only screen and (max-width: $bp-large) {
-      /* seperate the image width from the list width AND the hamburger icon on smaller devices */
-      grid-template-columns: 8rem 1fr 8rem;
-      grid-template-rows: 10rem;
-    }
   }
   &__badge {
     grid-column: 1 / 2;
+    grid-row: 1 /2;
     /* width of badge */
-    width: 8rem;
+    width: 7rem;
     /* height of the badge */
     height: 8rem;
     /* set margin from edge of page */
     margin: 1rem;
   }
   /* inner being the links and the hamburger menu */
-  &__inner {
+  &__content {
     /* content being list and menu toggle */
     grid-column: 2 / 10;
     display: grid;
     /* align list items vertically in middle */
     align-content: center;
     @media only screen and (max-width: $bp-large) {
+      grid-column: 2 / 8;
+      display: none;
       /* move hamburger to end horizontally */
       justify-content: end;
       /* needed to make it stay in the default position within the row */
@@ -55,7 +51,6 @@
     display: none;
     height: 6rem;
     width: 6rem;
-    grid-column: 2/3;
     margin: 1.5rem;
     background-image: radial-gradient($color-primary, $color-primary-dark);
   }
@@ -67,10 +62,9 @@
     /* only want to display the hamburger icon on smaller devices */
     display: flex;
   }
+  grid-column: 9 /10;
   /* hide hamburger on larger viewports */
   display: none;
-  /* sit in the last part of the layout 8rem 1fr 8rem for smaller devices detailed above */
-  grid-column: 2 / 3;
   /* set margin from edge of page */
   margin: 1rem;
   /*set width and height of hamburger */
