--- a/css/style.css
+++ b/css/style.css
@@ -279,11 +279,12 @@ body {
     @media only screen and (max-width: 62.5em) {
       .second-nav__content {
         grid-column: 2 / 8;
-        display: none;
-        /* move hamburger to end horizontally */
-        justify-content: end;
-        /* needed to make it stay in the default position within the row */
-        align-content: stretch; } }
+        /* push content down to lower in the container */
+        grid-row: 2 / 3;
+        /* put the list above the rest of content */
+        z-index: 2;
+        /* make z-index value work*/
+        position: relative; } }
   .second-nav__list {
     display: grid;
     /* align items on page horizontally */
@@ -296,6 +297,11 @@ body {
     text-decoration: none;
     font-size: 1.8rem;
     color: #0a19a1; }
+    @media only screen and (max-width: 62.5em) {
+      .second-nav__link {
+        font-size: 2.5rem;
+        padding: 0.5rem 0;
+        color: red; } }
   .second-nav__background {
     grid-column: 9 /10;
     display: none;
