--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -22,9 +22,9 @@
     /* align list items vertically in middle */
     align-content: center;
     @media only screen and (max-width: $bp-large) {
-      grid-column: 2 / 8;
+      grid-column: 1 / 10;
       /* push content down to lower in the container */
-      grid-row: 2 / 3;
+      grid-row: 1 / 2;
       /* put the list above the rest of content */
       z-index: 2;
       /* make z-index value work*/
@@ -38,6 +38,9 @@
     /* organise list items in columns with a minimum width of 10rem, max width 1fr */
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     list-style: none;
+    @media only screen and (max-width: $bp-large) {
+      grid-template-columns: 100%;
+    }
   }
   &__link {
     text-transform: uppercase;
@@ -45,8 +48,8 @@
     font-size: 1.8rem;
     color: $color-primary-dark;
     @media only screen and (max-width: $bp-large) {
-      font-size: 2.5rem;
-      padding: 0.5rem 0;
+      font-size: 4rem;
+      padding: 1rem 0;
       color: red;
     }
   }
@@ -61,6 +64,8 @@
     width: 6rem;
     margin: 1.5rem;
     background-image: radial-gradient($color-primary, $color-primary-dark);
+
+    transform: scale(50);
   }
 }
 
@@ -69,6 +74,7 @@
   @media only screen and (max-width: $bp-large) {
     /* only want to display the hamburger icon on smaller devices */
     display: flex;
+    z-index: 2;
   }
   grid-column: 9 /10;
   /* hide hamburger on larger viewports */
@@ -76,8 +82,8 @@
   /* set margin from edge of page */
   margin: 1rem;
   /*set width and height of hamburger */
-  width: 8rem;
-  height: 8rem;
+  width: 7rem;
+  height: 7rem;
   background: transparent;
   border: none;
   cursor: pointer;
