--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -25,7 +25,7 @@
       grid-column: 1 / 10;
       grid-row: 1 / 2;
       /* put the list above the rest of content */
-      z-index: 2;
+      z-index: 3;
       /* make z-index value work*/
       position: relative;
     }
@@ -62,8 +62,9 @@
     height: 6rem;
     width: 6rem;
     margin: 1.5rem;
-    background-image: radial-gradient($color-primary-dark, $color-grey-1);
-    transform: scale(50);
+    background-image: radial-gradient($color-primary, $color-grey-1);
+    transform: scale(200);
+    z-index: 2;
   }
 }
 
@@ -72,7 +73,7 @@
   @media only screen and (max-width: $bp-large) {
     /* only want to display the hamburger icon on smaller devices */
     display: flex;
-    z-index: 2;
+    z-index: 3;
     background-color: $color-primary-dark;
 
     translate: 0 -10vh;
