back to previous state for on click hamburger nav work

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,8 @@ body {
         /* put the list above the rest of content */
         z-index: 3;
         /* make z-index value work*/
-        position: relative; } }
+        position: relative;
+        opacity: 0; } }
   .second-nav__list {
     display: grid;
     /* align items on page horizontally */
@@ -311,7 +312,6 @@ body {
     width: 6rem;
     margin: 1.5rem;
     background-image: radial-gradient(#0c22e8, #f9f7f6);
-    transform: scale(200);
     z-index: 2; }
     @media only screen and (max-width: 62.5em) {
       .second-nav__background {
@@ -345,8 +345,7 @@ body {
       /* only want to display the hamburger icon on smaller devices */
       display: flex;
       z-index: 3;
-      background-color: #0a19a1;
-      translate: 0 -10vh; } }
+      background-color: #0a19a1; } }
   .menu-toggle:hover {
     background-color: #0a19a1; }
   .menu-toggle__inner {
