--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -28,6 +28,7 @@
       z-index: 3;
       /* make z-index value work*/
       position: relative;
+      opacity: 0;
     }
   }
   &__list {
@@ -63,7 +64,7 @@
     width: 6rem;
     margin: 1.5rem;
     background-image: radial-gradient($color-primary, $color-grey-1);
-    transform: scale(200);
+    // transform: scale(200);
     z-index: 2;
   }
 }
@@ -76,7 +77,7 @@
     z-index: 3;
     background-color: $color-primary-dark;
 
-    translate: 0 -10vh;
+    // translate: 0 -10vh;
   }
   grid-column: 9 /10;
   grid-row: 1 / 2;
