--- a/css/style.css
+++ b/css/style.css
@@ -315,23 +315,6 @@ body {
         padding: 1rem 0;
         /* blue background - so links need to be white */
         color: #f9f7f6; } }
-  .second-nav__background {
-    grid-column: 9 /10;
-    grid-row: 1/2;
-    display: none;
-    /* make slightly smaller than the actual button with a slightly bigger margin */
-    margin: 1.5rem;
-    height: 6rem;
-    width: 6rem;
-    background-image: radial-gradient(#0c22e8, #f9f7f6);
-    /* needs to be be above general content but below the hamburger */
-    z-index: 2; }
-    @media only screen and (max-width: 62.5em) {
-      .second-nav__background {
-        /* make background visible rather than not with display none on smaller devices */
-        display: block;
-        /* push the background to end of the container horizontally */
-        justify-self: end; } }
 
 .menu-toggle {
   grid-column: 9 / 10;
@@ -343,9 +326,9 @@ body {
   /*set width and height of hamburger */
   width: 8rem;
   height: 8rem;
-  background: transparent;
   border: none;
   cursor: pointer;
+  text-align: center;
   flex-direction: column;
   /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
   align-items: center;
@@ -364,6 +347,27 @@ body {
       background-color: #0a19a1; } }
   .menu-toggle:hover {
     background-color: #0a19a1; }
+  .menu-toggle__background {
+    grid-column: 9 /10;
+    grid-row: 1/2;
+    display: none;
+    /* make slightly smaller than the actual button with a slightly bigger margin */
+    margin: 1.5rem;
+    height: 6rem;
+    width: 6rem;
+    background-image: radial-gradient(#0c22e8, #f9f7f6);
+    /* needs to be be above general content but below the hamburger */
+    z-index: 2; }
+    @media only screen and (max-width: 62.5em) {
+      .menu-toggle__background {
+        /* make background visible rather than not with display none on smaller devices */
+        display: block;
+        /* push the background to end of the container horizontally */
+        justify-self: end; } }
+  .menu-toggle__checkbox[type='checked'] {
+    visibility: hidden; }
+  .menu-toggle__checkbox[type='checked']:checked ~ .menu-toggle__background {
+    transform: scale(80); }
   .menu-toggle__inner {
     display: grid;
     align-items: center;
