--- a/css/style.css
+++ b/css/style.css
@@ -315,39 +315,40 @@ body {
         padding: 1rem 0;
         /* blue background - so links need to be white */
         color: #f9f7f6; } }
-
-.menu-toggle {
-  grid-column: 9 / 10;
-  grid-row: 1 / 2;
-  /* hide hamburger on larger viewports */
-  display: none;
-  /* set margin from edge of page */
-  margin: 1rem;
-  /*set width and height of hamburger */
-  width: 8rem;
-  height: 8rem;
-  border: none;
-  cursor: pointer;
-  text-align: center;
-  flex-direction: column;
-  /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
-  align-items: center;
-  /* WHY? - remember the flex-direction has now been set as column so justify-content will now be vertically */
-  justify-content: center;
-  background-color: #0c22e8;
-  position: relative;
-  /* move toggle to the end horizontally*/
-  justify-self: end; }
-  @media only screen and (max-width: 62.5em) {
-    .menu-toggle {
-      /* only want to display the hamburger icon on smaller devices */
-      display: flex;
-      /* needs to be at the top above background on transform and general content */
-      z-index: 3;
-      background-color: #0a19a1; } }
-  .menu-toggle:hover {
-    background-color: #0a19a1; }
-  .menu-toggle__background {
+  .second-nav__checkbox {
+    display: none; }
+  .second-nav__toggle {
+    grid-column: 9 / 10;
+    grid-row: 1 / 2;
+    /* hide hamburger on larger viewports */
+    display: none;
+    /* set margin from edge of page */
+    margin: 1rem;
+    /*set width and height of hamburger */
+    width: 8rem;
+    height: 8rem;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    flex-direction: column;
+    /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
+    align-items: center;
+    /* WHY? - remember the flex-direction has now been set as column so justify-content will now be vertically */
+    justify-content: center;
+    background-color: #0c22e8;
+    position: relative;
+    /* move toggle to the end horizontally*/
+    justify-self: end; }
+    @media only screen and (max-width: 62.5em) {
+      .second-nav__toggle {
+        /* only want to display the hamburger icon on smaller devices */
+        display: flex;
+        /* needs to be at the top above background on transform and general content */
+        z-index: 3;
+        background-color: #0a19a1; } }
+    .second-nav__toggle:hover {
+      background-color: #0a19a1; }
+  .second-nav__background {
     grid-column: 9 /10;
     grid-row: 1/2;
     display: none;
@@ -359,33 +360,34 @@ body {
     /* needs to be be above general content but below the hamburger */
     z-index: 2; }
     @media only screen and (max-width: 62.5em) {
-      .menu-toggle__background {
+      .second-nav__background {
         /* make background visible rather than not with display none on smaller devices */
         display: block;
         /* push the background to end of the container horizontally */
         justify-self: end; } }
-  .menu-toggle__checkbox[type='checked'] {
-    visibility: hidden; }
-  .menu-toggle__checkbox[type='checked']:checked ~ .menu-toggle__background {
-    transform: scale(80); }
-  .menu-toggle__inner {
+  .second-nav__checkbox:checked ~ .second-nav__background {
+    transform: scale(120); }
+  .second-nav__checkbox:checked ~ .second-nav__content {
+    opacity: 1;
+    width: 100%; }
+  .second-nav__inner {
     display: grid;
     align-items: center;
-    height: 3rem;
-    width: 3rem; }
-  .menu-toggle span {
+    height: 4rem;
+    width: 4rem; }
+  .second-nav span {
     height: 2px;
     background-color: #f9f7f6; }
-    .menu-toggle span::before, .menu-toggle span::after {
+    .second-nav span::before, .second-nav span::after {
       background-color: #f9f7f6;
       height: 2px;
       content: '';
       display: block; }
-    .menu-toggle span::before {
-      transform: translateY(-1rem); }
-    .menu-toggle span::after {
-      transform: translateY(0.8rem); }
-  .menu-toggle__label {
+    .second-nav span::before {
+      transform: translateY(-1.2rem); }
+    .second-nav span::after {
+      transform: translateY(1rem); }
+  .second-nav__label {
     font-family: "Lato", sans-serif;
     color: #f9f7f6;
     text-transform: uppercase;
