--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -69,7 +69,7 @@
     display: none;
   }
 
-  &__toggle {
+  &__button {
     @media only screen and (max-width: $bp-large) {
       /* only want to display the hamburger icon on smaller devices */
       display: flex;
@@ -137,42 +137,54 @@
     width: 100%;
   }
 
-  &__inner {
-    // define the inner container (with span and before and after elements) as a grid to group
-    display: grid;
-    // align them vertically centrally - rather than at top of blue button as before
-    align-items: center;
-    // define height and width of the grid with the span and before & after elements in it
-    height: 4rem;
-    width: 4rem;
-  }
-  span {
-    height: 2px;
-    background-color: $color-grey-1;
+  //ICON
+  &__icon {
+    position: relative;
+
+    &,
     &::before,
     &::after {
-      background-color: $color-grey-1;
+      width: 4rem;
       height: 2px;
-      // need to define a content
-      content: '';
-      display: block;
+      background-color: $color-grey-1;
+      display: inline-block;
     }
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+
     &::before {
-      // move before element up
-      transform: translateY(-1.2rem);
+      top: -0.8rem;
     }
     &::after {
-      // move after elements down
-      transform: translateY(1rem);
+      top: 0.8rem;
     }
   }
 
-  &__label {
-    font-family: $font-display;
-    color: $color-grey-1;
-    text-transform: uppercase;
-    font-size: 1rem;
-    margin-top: 0.1rem;
-    // display: none;
+  &__button:hover &__icon::before {
+    top: -1rem;
+  }
+
+  &__button:hover &__icon::after {
+    top: 1rem;
+  }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
   }
 }
