--- a/sass/_navbar-second.scss
+++ b/sass/_navbar-second.scss
@@ -1,10 +1,14 @@
 .second-nav {
   &__container {
+    /* ensure the background-color of the overall bar is grey */
     background-color: $color-grey-1;
+    /* make second nav a grid */
     display: grid;
+    /* ensure second nav is full width across the page */
     grid-column: full-start / full-end;
   }
   &__badge {
+    /* take the first column of the second nav grid */
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     /* width of badge */
@@ -25,7 +29,7 @@
       /* make navbar from beginning to end on smaller devices so can center it */
       grid-column: 1 / 10;
       /* ensure the links don't push too far down the page on smaller viewports */
-      grid-row: 1 /2;
+      grid-row: 1 / 2;
       /* put the list above the rest of content */
       z-index: 3;
       /* make z-index value work*/
@@ -44,6 +48,7 @@
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     /* get rid of bullet points */
     list-style: none;
+    /* ensure font is right font for titles */
     font-family: $font-display;
     @media only screen and (max-width: $bp-large) {
       /* make it one column taking up 100% of the width of to the content which was 1 / 10 column */
@@ -52,15 +57,17 @@
   }
   &__link {
     text-transform: uppercase;
+    /* get rid of list bullet points */
     text-decoration: none;
     font-size: 1.8rem;
+    /* blue on the grey background for desktop */
     color: $color-primary-dark;
     @media only screen and (max-width: $bp-large) {
       /* links font size increase */
       font-size: 4rem;
       /* padding top and bottom of the links */
       padding: 1rem 0;
-      /* blue background - so links need to be white */
+      /* smaller devices - blue background - so links need to be white */
       color: $color-grey-1;
     }
   }
@@ -79,6 +86,7 @@
       z-index: 3;
       background-color: $color-primary-dark;
     }
+    /* put it to the right on the viewport */
     grid-column: 9 / 10;
     grid-row: 1 / 2;
     /* hide hamburger on larger viewports */
@@ -88,11 +96,9 @@
     /*set width and height of hamburger */
     width: 8rem;
     height: 8rem;
-    // background: transparent;
     border: none;
     cursor: pointer;
     text-align: center;
-
     flex-direction: column;
     // this will align everything horizontally
     /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
@@ -136,6 +142,7 @@
   }
 
   &__checkbox:checked ~ &__content {
+    /* when click on checkbox - want sibling element content (i.e. the links be visible cause opacity and width was set as 0) */
     opacity: 1;
     width: 100%;
   }
