--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -47,7 +47,7 @@ body {
   /* comments for the grid-template-rows */
   // 80% of the view-height, then min-content - smallest size of box without overflowing content.
 
-  grid-template-rows: 10rem 10rem 80vh min-content repeat(2, min-content);
+  grid-template-rows: 10rem 10rem 80vh 80vh min-content repeat(2, min-content);
   grid-template-columns:
     [full-start] minmax(6rem, 1fr) [center-start] repeat(
       8,
@@ -58,6 +58,6 @@ body {
   // why only name the columns and not the rows?
   // in overall layout focus is generally on the columns and not the rows - columns more important
   @media only screen and (max-width: $bp-large) {
-    grid-template-rows: 10rem 10rem calc(100vh - 20rem);
+    grid-template-rows: 10rem 10rem calc(100vh - 20rem) calc(100vh - 20rem);
   }
 }
