--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'base';
 @import 'features';
 @import 'footer';
+@import 'banner';
 @import 'header';
 @import 'players';
 @import 'navbar-first';
