--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,7 +13,7 @@
       rgba($color-grey-1, 0.7),
       rgba($color-grey-1, 0.7)
     ),
-    url(../img/header-image1.png);
+    url(../img/training-top.png);
   background-size: cover;
   background-position: center;
   padding: 5rem;
