--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,19 @@ body {
   grid-column: full-start / full-end; }
 
 .banner {
-  grid-column: full-start / full-end;
-  background-color: grey; }
+  grid-column: full-start / full-end; }
 
 .slideshow {
-  display: none; }
+  height: 100%; }
+  .slideshow__wrapper {
+    /* display images in a row using flex */
+    display: flex;
+    width: 400%;
+    height: 100%; }
+
+.slide img {
+  width: 100%;
+  height: 100%; }
 
 .header {
   /* 6/8 columns = for the header, 2/8 columns for the players section */
