--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  grid-column: full-start / full-end;
+  grid-column: full-start / col-end 5;
 }
 
 .slideshow {
@@ -7,12 +7,67 @@
   &__wrapper {
     /* display images in a row using flex */
     display: flex;
-    width: 400%;
+    /* wrapper of 400% because 4 images - each image take up 1/4 of wrapper */
     height: 100%;
+    position: relative;
+    animation: slideshow 20s infinite;
   }
 }
 
 .slide img {
-  width: 100%;
   height: 100%;
+}
+
+@keyframes slideshow {
+  0% {
+    left: 0;
+  }
+
+  10% {
+    left: 0;
+  }
+
+  15% {
+    left: -100%;
+  }
+
+  25% {
+    left: -100%;
+  }
+
+  30% {
+    left: -200%;
+  }
+
+  40% {
+    left: -200%;
+  }
+
+  45% {
+    left: -300%;
+  }
+
+  55% {
+    left: -300%;
+  }
+
+  60% {
+    left: -200%;
+  }
+
+  70% {
+    left: -200%;
+  }
+
+  75% {
+    left: -100%;
+  }
+
+  85% {
+    left: -100%;
+  }
+
+  90% {
+    left: 0;
+  }
 }
