--- a/css/style.css
+++ b/css/style.css
@@ -75,17 +75,21 @@ body {
   grid-column: full-start / col-end 5; }
 
 .slideshow {
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
   .slideshow__wrapper {
     /* display images in a row using flex */
     display: flex;
     /* wrapper of 400% because 4 images - each image take up 1/4 of wrapper */
+    width: 400%;
     height: 100%;
     position: relative;
     animation: slideshow 20s infinite; }
 
 .slide img {
-  height: 100%; }
+  height: 100%;
+  width: 100%;
+  object-fit: cover; }
 
 @keyframes slideshow {
   0% {
