--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  grid-column: full-start / col-end 5;
+  grid-column: full-start / col-end 4;
 }
 
 .slideshow {
@@ -8,6 +8,7 @@
   &__wrapper {
     /* display images in a row using flex */
     display: flex;
+    justify-content: space-evenly;
     /* wrapper of 400% because 4 images - each image take up 1/4 of wrapper */
     width: 400%;
     height: 100%;
@@ -18,10 +19,11 @@
 
 .slide img {
   height: 100%;
-  width: 100%;
+  width: 50vw;
   object-fit: cover;
 }
 
+/* keyframes percentages? = percentage of the animation duration */
 @keyframes slideshow {
   0% {
     left: 0;
